* src/templates/macros/GlobalMacros.vm   #userList(): Refresh button for changing the results per page needs   to have an action name.
Issue: PCN19786
Submitted by: Elicia David
Reviewed by: Daniel Rall

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -744,7 +744,7 @@ selected the radio button.
        <th>$l10n.MaxPerPage</th>
        <td>
            #resultsPerPageRadioSelect($resultsPerPage false)
-           &#160;<input type="submit" value="$l10n.Refresh" />
+           &#160;<input type="submit"  name="eventSubmit_doRefresh" value="$l10n.Refresh" />
        </td>
      </tr>
   </table>
