Broke the information on XML Import/export out of UserIssues.vm  into its own file (UserIssuesImportExport.vm) and added links to it in the Help index in UserIssues.vm, UserIssueEntry.vm, UserIssueModify.vm and UserIssueTemplates.vm Issue# 20266 Reviewedby tberry

--- a/src/templates/screens/help/UserIssueEntry.vm
+++ b/src/templates/screens/help/UserIssueEntry.vm
@@ -8,6 +8,7 @@
                 <ul>
                   <li><a href="$link.setPage("help,UserIssueOverview.vm")">$l10n.Overview</a> 
                   </li>
+                  <li><a href="$link.setPage("help,UserIssueImportExport.vm")">$l10n.XMLImportExport</a></li>
                   <li><strong>$l10n.EnteringIssues </strong> 
                     <ul>
                       <li><a href="#top">$l10n.Composing</a></li>
