--- a/src/templates/screens/help/UserIssueTemplates.vm
+++ b/src/templates/screens/help/UserIssueTemplates.vm
@@ -7,6 +7,7 @@
           <li>$l10n.ManagingIssues
             <ul>
               <li><a href="$link.setPage("help,UserIssues.vm")">$l10n.Overview</a> 
+               <li><a href="$link.setPage("help,UserIssueImportExport.vm")">$l10n.XMLImportExport</a></li>
               <li><a href="$link.setPage("help,UserIssueEntry.vm")">$l10n.EnteringIssues</a> </li>
               <li><strong>$l10n.UsingTemplates</strong> 
                 <ul>
