* src/i18n/ScarabBundle_en_US.properties   Replaced MovedIssueDescription and MoveCopyString with   MovedFromIssueDescription and MovedToIssueDescription.  The former resources   had the dual choice "copied/moved from/to issue...".  It could be difficult   to l10n that combination in some languages.  I left the single choice of   copied/moved as it is used in other places, though I'm not completely   convinced it is optimal i18n.   Incorporated the IssueMoved2, copied, and moved resources into IssueMoved in   order to facilitate better l10n.   removed copy resource as its usage was an error.
* src/java/org/tigris/scarab/om/Issue.java
  Added COPIED and MOVED constants for the choice in the ResourceBundle
  move.
  Fixed bad logic that was putting english text into an otherwise l10n message
  and making the code more complex in the process.
* src/templates/email/MoveIssue.vm
  Removed comparison to an l10n value which would only work for english.
  Put the moved/copied choice into the ResourceBundle.
  combined IssueMoved and IssueMoved2 into one resource for better l10n.
* src/templates/screens/MoveIssue2.vm
  Not an i18n related fix, but found while testing.  Since we are looping and
  some later setting of $displayValue could fail due to a null value, we need
  to set it to a known value before each update.

Issue: PCN19410
Submitted by: John McNally
Reviewed by: Daniel Rall

--- a/src/templates/email/MoveIssue.vm
+++ b/src/templates/email/MoveIssue.vm
@@ -1,11 +1,11 @@
-#if ($action.equals("$l10n.copy"))
-  #set ($actionWord = "$l10n.copied")
+#if ($action.equals("copy"))
+  #set ($actionChoice = 1)
 #else
-  #set ($actionWord = "$l10n.moved")
+  #set ($actionChoice = 2)
 #end
 
-#set ($msgArgs = [$oldModule.Name, $issue.Module.Name, $issue.IssueType.Name, $issue.ModifiedBy.UserName])
-$l10n.format("IssueMoved", $issue.UniqueId, $actionWord) $l10n.format("IssueMoved2", $msgArgs) 
+#set ($msgArgs = [$issue.UniqueId, $actionChoice, $oldModule.Name, $issue.Module.Name, $issue.IssueType.Name, $issue.ModifiedBy.UserName])
+$l10n.format("IssueMoved", $msgArgs) 
 
 $l10n.YouCanViewIssue:
 
