File:  src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java #doSaveinfo() and #doSavegroups() - Handled the null situations for 'rmit' object.
File: src/templates/screens/admin/ArtifactTypeEdit.vm
#Handled the null situations for 'rmit' object. And also set its initial value to "".
This is to prevent  $rmit from referring to its last not-null value when the actual value
returned is null.

File: src/i18n/ScarabBundle_en_US.properties
#Added keys to alert when the artifact type is already removed from the project.

File: src/java/org/tigris/scarab/screens/Default.java
#doBuildTemplate()- getTitle(..) is executed in a try/catch block to ignore
NPE that would result when the module/issue type is null.


Issue: PCN19604
Reviewed by: Elicia
Committed by: Venkat

--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -1,7 +1,10 @@
+#set ($rmit = "")
 #set ($module = $scarabR.CurrentModule)
 #set ($issueType = $scarabR.IssueType)
 #set ($issueTypeId = $data.Parameters.getString("issueTypeId",""))
 #set ($issueTypeLock = $issueType.Locked)
+#set ($groups = $module.getAttributeGroups($issueType, false))
+#set ($rmit= $module.getRModuleIssueType($issueType))
 
 <div class="app" id="div2-1-4-0">
 
@@ -9,10 +12,14 @@
 <p class="infomark"><em>$l10n.IssueTypeNotFound
 $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
 </em></p>
-#else
-#set ($groups = $module.getAttributeGroups($issueType, false))
 
-#set ($rmit= $module.getRModuleIssueType($issueType))
+#elseif ($rmit.length() == 0)
+<p class="infomark"><em>$l10n.IssueTypeRemovedFromModuleAndProceed
+$link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
+</em></p>
+
+#else
+
 #set ($rmitGroup = $intake.RModuleIssueType.mapTo($rmit))
 #set ($modGroup = $intake.Module.mapTo($module))
 
