Issue number: 19815 - Getting connection is null error, rendering scarab unusable after a period of it working properly.  The main fix for this problem was an earlier upgrade of commons-dbcp.  But it prompted changes to better handle the open Connection objects. This change limits the number open queries, so that the entire application cannot be made completely unusable by using up all connections to the db for issue queries.
Modified files:
* src/conf/Scarab.properties - added scarab.concurrent.search.max and
  scarab.concurrent.search.wait to control the availability of IssueSearch
  objects.
* src/i18n/ScarabBundle_en_US.properties - new resources: Unavailable,
  DupeCheckSkippedForLackOfResources, and ResourceLimitationsPreventedSearch
  for messages related to reaching the maximum number of searches.
* src/java/org/tigris/scarab/actions/ReportIssue.java -
  searchAndSetTemplate: getting IssueSearch object from factory and added
  try/catch/finally to notify the factory when we are done and notify the
  user if duplicate checking is unavailable.
* src/java/org/tigris/scarab/om/MITListItem.java - getIssueCount:
  getting IssueSearch object from factory and added
  try/catch/finally to notify the factory when we are done and return a
  value of -1, if we could not get the count.
* src/java/org/tigris/scarab/tools/ScarabRequestTool.java -
  refresh: notify the factory we are done with the IssueSearch object
  getNewSearch: getting IssueSearch object from factory and added
  throws MaxConcurrentSearchException clause
  getCurrentSearchResults: catch MaxConcurrentSearchException and notify
  user, the search can't be done at this time.
* src/java/org/tigris/scarab/util/word/IssueSearch.java -
  make all constructors package access only, as factory should be used to
  get an IssueSearch object.
  finalize: add extra insurance that we don't leak IssueSearch objects
  by notifying the factory, if it did not appear that this object was
  cleaned up properly
* src/templat

--- a/src/templates/macros/MITListMacro.vm
+++ b/src/templates/macros/MITListMacro.vm
@@ -72,7 +72,8 @@ $l10n.NoIssueTypeSelected
     </td>
     <td>$item.Module.Name</td>
     <td>$item.Module.getRModuleIssueType($item.IssueType).DisplayName</td>
-    <td>$item.getIssueCount($data.User)</td>
+    #set ($issuecount = $item.getIssueCount($data.User))
+    <td>#if ($issuecount >= 0)$issuecount #else $l10n.Unavailable</td>
     <td>$item.IssueType.Description</td>
   </tr>        
  #end
