Handle mid-air collisions while moving an issue:
File:src/java/org/tigris/scarab/actions/ModifyIssue.java
#doMove() - Check for collision before moving the artifact
#doCopy() - Check for collision before moving the artifact

File:src/templates/screens/ViewIssue.vm
Check for collision first if the previous action was "MoveIssue"

File:src/java/org/tigris/scarab/tools/ScarabRequestTool.java
#getIssue(String id): Different alert messages are provided now when the issue
isnull and when the issue is deleted.

File:src/java/org/tigris/scarab/actions/MoveIssue.java
The class extends BaseModifyIssue.java now instead of
RequiresLoginFirstAction.java to inherit method that checks collisions.
#doValidate() - Check for collision before validating
#doSaveissue() - Check for collision before saving

File:src/templates/screens/MoveIssue.vm
#Added a hidden parameter "mod_ts" to check for collision

File:src/templates/screens/MoveIssue2.vm
#Added hidden parameters "mod_ts" and "id" to check for collision.

File:src/i18n/ScarabBundle_en_US.properties
#New Property - "IssueMoved=Issue has been moved to a different module" added.


Issue: PCN 19592
Reviewed by: Elicia David
Committed by:Venkat

--- a/src/templates/screens/MoveIssue.vm
+++ b/src/templates/screens/MoveIssue.vm
@@ -32,7 +32,7 @@ elseif ($copyToModules.isEmpty())
 #else
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="ViewIssue.vm" />
 #end
-
+<input type="hidden" name="mod_ts" value="$scarabG.Now.Time" />
 <div class="axial">
 <table border="0" cellspacing="2" cellpadding="3">
   <tr>
