Handle mid-air collisions while moving an issue:
File:src/java/org/tigris/scarab/actions/ModifyIssue.java
#doMove() - Check for collision before moving the artifact
#doCopy() - Check for collision before moving the artifact

File:src/templates/screens/ViewIssue.vm
Check for collision first if the previous action was "MoveIssue"

File:src/java/org/tigris/scarab/tools/ScarabRequestTool.java
#getIssue(String id): Different alert messages are provided now when the issue
isnull and when the issue is deleted.

File:src/java/org/tigris/scarab/actions/MoveIssue.java
The class extends BaseModifyIssue.java now instead of
RequiresLoginFirstAction.java to inherit method that checks collisions.
#doValidate() - Check for collision before validating
#doSaveissue() - Check for collision before saving

File:src/templates/screens/MoveIssue.vm
#Added a hidden parameter "mod_ts" to check for collision

File:src/templates/screens/MoveIssue2.vm
#Added hidden parameters "mod_ts" and "id" to check for collision.

File:src/i18n/ScarabBundle_en_US.properties
#New Property - "IssueMoved=Issue has been moved to a different module" added.


Issue: PCN 19592
Reviewed by: Elicia David
Committed by:Venkat

--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -3,6 +3,10 @@
 #set ($currentIssueId = $data.Parameters.getString("id"))
 #set ($currentIssue = $scarabR.getIssue($currentIssueId))
 
+#if ($collisionDetectedOnMoveAttempt)
+  #printCollisionInfo()
+#end
+
 #if ($currentIssue && $scarabR.hasPermission($scarabG.Permission.ISSUE__VIEW, $currentIssue.Module))
 
  #if ($currentIssue.Module != $scarabR.CurrentModule)
@@ -10,9 +14,11 @@
    $l10n.format("ViewIssueInDifferentModule", $currentIssue.Module.Name)
   </em></p>
  #end
+##Do not call printCollisionInfo() again if $collisionDetectedOnMoveAttempt were true
+ #if (!$collisionDetectedOnMoveAttempt)
+  #printCollisionInfo()
+ #end
 
- #printCollisionInfo()
- 
  #set ($prevNextList = $data.Parameters.getStrings("issueList"))
  #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
  <form method="post" enctype="multipart/form-data" action="$link.setPage("ViewIssue.vm")">
@@ -105,12 +111,12 @@ $renderer.render("viewIssue", "ViewIssueBody.vm")
     <p><em>
     $l10n.NoPermissionToViewIssue
     </em></p>
-#else
+#elseif (!$collisionDetectedOnMoveAttempt)
 <h3>$l10n.IssueSearchResults</h3>
 
   #if ($currentIssueId && $currentIssueId.length() > 0)
     <p><em>
-    $l10n.format("IssueIdNotValid", $currentIssueId) $l10n.PleaseEnterNewIssueId 
+    $l10n.format("IssueIdNotValid", $currentIssueId) $l10n.PleaseEnterNewIssueId
     </em></p>
   #else
     <p><em>
