Integration of Scarab into other products may require different documentation.  Make that possible.
* src/java/org/tigris/scarab/tools/ScarabGlobalTool.java
  templateExists(String name): New method which delegates to
  TurbineVelocityService to check whether a template exists.

* src/templates/screens/help/UserIssues.vm
  Supress the link to UserIssueImportExport.vm if that template isn't
  available.

Issue: PCN19410
Submitted by: Daniel Rall
Reviewed by: Carol Jankura

--- a/src/templates/screens/help/UserIssues.vm
+++ b/src/templates/screens/help/UserIssues.vm
@@ -13,7 +13,9 @@
                   <li><a href="#entry">$l10n.IssueEntryScreen</a></li>
                 </ul>
               </li>
+#if ($scarabG.templateExists("help/UserIssueImportExport.vm"))
               <li><a href="$link.setPage("help,UserIssueImportExport.vm")">$l10n.XMLImportExport</a></li>
+#end
               <li><a href="$link.setPage("help,UserIssueEntry.vm")">$l10n.EnteringIssues </a> </li>
               <li><a href="$link.setPage("help,UserIssueTemplates.vm")">$l10n.UsingTemplates</a></li>
               <li><a href="$link.setPage("help,UserIssueModify.vm")">$l10n.ModifyingIssues</a></li>
