* TemplateList.java: doCreateNew(): test for null current issue type and give error messa ge if issue type has been disabled. * screens/TemplateList.java: getTitle():if current issue type is disabled, do not show it  in the title. *  TemplateList.vm, SaveTemplate.vm: if current issue type has become disabled, do not re ender page, show alert message instead. * ScarabBundle_en_US.properties: add resource "IssueTypeNotAvailable" Issue number:  20645 Reviewed by:   kmaples

--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -6,6 +6,7 @@
 #set ($templateGroup = $intake.IssueTemplateInfo.mapTo($templateInfo))
 #set ($issueGroup = $intake.Issue.mapTo($currentTemplate ))
 
+#if ($issueType)
 
 <div class="app" id="savetemplate">
 
@@ -33,7 +34,7 @@
 #end
 
 #if (!$module.hasAttributes($issueType))
-<p class="warningmark"><strong>$l10n.NoAttributesForTemplate</strong></p>
+<p class="warningmark"><strong>$l10n.NoAttributesDefinedForTemplate</strong></p>
 #else
 
 #if ($templateId)
@@ -144,4 +145,8 @@ $intake.declareGroups()
 #end
 
 </form>
+
+#else
+ <p class="warningmark"><strong>$l10n.IssueTypeUnavailable</strong></p>
+#end
 </div>
