* RModuleAttribute.java: delete(), Attribute.java:  deleteModuleMappings():    when deleting attribute globally, force deletion from module even when artifact type is locked. * ScarabBundle_en_US.properties: add error messages. * ModuleAttributeEdit.vm, IssueTypeAttributeEdit.vm:  "Here", not "here" is the correct i18n resource. Issue number: 20720 Reviewed by:   kmaples

--- a/src/templates/screens/admin/IssueTypeAttributeEdit.vm
+++ b/src/templates/screens/admin/IssueTypeAttributeEdit.vm
@@ -17,7 +17,7 @@
 
 #if (!$attType)
 <p class="infomark"><em>$l10n.AttributeNotFound
-$link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.here").</em></p>
+$link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").</em></p>
 #else
 
 <form action="$link.setPage("admin,IssueTypeAttributeEdit.vm")" method="post">
