--- a/src/templates/screens/admin/ModuleAttributeEdit.vm
+++ b/src/templates/screens/admin/ModuleAttributeEdit.vm
@@ -18,7 +18,7 @@
 
 #if (!$attType)
 <p class="infomark"><em>$l10n.AttributeNotFound
-$link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.here").</em></p>
+$link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").</em></p>
 #else
 
 <form action="$link.setPage("admin,ModuleAttributeEdit.vm")" method="post">
