Prevent control from leading to "Project Tracker:error copy or move?" page, when a project is just unlocked (when "action" is not specified).
* src/templates/screens/MoveIssue.vm
  '#' prepended to "elseif" statement.

* src/java/org/tigris/scarab/screens/MoveIssue.java
  getTitle(): Target set to "ViewIssue.vm" and alerted the user if
  there is no "action" available.

* src/i18n/ScarabBundle_en_US.properties
  NoActionSpecified: Resource added to alert the user when move/copy
  "action" is not specified for the MoveIssue screen.

Issue: PCN19931
Submitted by: Arun
Reviewed by: John McNally, Kevin Maples, Daniel Rall

--- a/src/templates/screens/MoveIssue.vm
+++ b/src/templates/screens/MoveIssue.vm
@@ -11,7 +11,7 @@
 
   <p class="infomark"><em>$l10n.CouldNotFindIssue</em></p>
 
-elseif ($copyToModules.isEmpty())
+#elseif ($copyToModules.isEmpty())
   <p class="infomark"><em>$l10n.NoDestinationModuleAvailable</em></p>
 
 #else
