--- a/src/templates/screens/help/UserIssueEntry.vm
+++ b/src/templates/screens/help/UserIssueEntry.vm
@@ -6,7 +6,7 @@
            <a href="$link.setPage("help,Introduction.vm")">$l10n.IntroToScarab</a> </li>
               <li><strong>$l10n.ManagingIssues</strong> 
                 <ul>
-                  <li><a href="$link.setPage("help,UserIssueOverview.vm")">$l10n.Overview</a> 
+                  <li><a href="$link.setPage("help,UserIssues.vm")">$l10n.Overview</a> 
                   </li>
  #if ($scarabG.templateExists("help/UserIssueImportExport.vm"))                  <li><a href="$link.setPage("help,UserIssueImportExport.vm")">$l10n.XMLImportExport</a></li>
  #end
