Issue number: 19786 - Users are not displayed when changing the Max Users per page Modified Files: * src/java/org/tigris/scarab/actions/admin/ManageArtifactTypes.java -   added a comment about a piece of confusing code.  Maybe it can be removed? * src/java/org/tigris/scarab/tools/ScarabRequestTool.java - added new   method getAdjustedPageNum() to correct the "pageNum" parameter if   resultsPerPage value was changed.  If the parameter "oldResultsPerPage" is   not present this method returns same value as the code it is replacing. * src/templates/macros/GlobalMacros.vm * src/templates/macros/MITListMacro.vm * src/templates/screens/IssueList.vm   the previous three templates now use the getAdjustedPageNum() method to avoid   going out of range when resultsPerPage is changed.  added oldResultsPerPage   as hidden input. * src/java/org/tigris/scarab/actions/admin/ManageUser.java - doSearch * src/templates/screens/MoveIssue.vm * src/templates/screens/QueryList.vm * src/templates/screens/TemplateList.vm * src/templates/screens/admin/GlobalArtifactTypeShow.vm * src/templates/screens/admin/GlobalAttributeShow.vm * src/templates/screens/admin/GlobalUserAttributes.vm * src/templates/screens/admin/ManageArtifactTypes.vm   the previous java method and seven templates use the new getAdjustedPageNum()   method, but oldResultsPerPage is not set, so the behavior will be unchanged.   The templates have pagination, but there is no way to change it from 25   resultsPerPage.
Reviewed by: elicia

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -664,7 +664,7 @@ selected the radio button.
 ## PAGINATION
 ## if results exceed limit, get subset list
 #set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage", 25))
-#set ($pageNum = $data.Parameters.getInt("pageNum", 1))
+#set ($pageNum = $scarabR.AdjustedPageNum)
 
 ## USER SEARCH
 <h3><a name="add">$l10n.Users</a></h3> 
@@ -745,6 +745,7 @@ selected the radio button.
        <td>
            #resultsPerPageRadioSelect($resultsPerPage false)
            &#160;<input type="submit"  name="eventSubmit_doRefresh" value="$l10n.Refresh" />
+           <input type="hidden" name="oldResultsPerPage" value="$resultsPerPage" />
        </td>
      </tr>
   </table>
