--- a/src/templates/screens/admin/ManageArtifactTypes.vm
+++ b/src/templates/screens/admin/ManageArtifactTypes.vm
@@ -24,7 +24,7 @@
 ## PAGINATION
 ## if results exceed limit, get subset list
 #set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage", 25))
-#set ($pageNum = $data.Parameters.getInt("pageNum", 1))
+#set ($pageNum = $scarabR.AdjustedPageNum)
 <input type="hidden" name="pageNum" value="$pageNum" />
 
 #set ($rmits = $module.getRModuleIssueTypes($sortColumn, $sortPolarity))
