Added new document on cross project queries UserQueryCrossProject.vm Added links to new file in UserQuery.vm UserQueryAdvanced.vm UserQueryCustom.vm UserQuerySaved.vm and UserQueryText.vm Issue number: 20004 Obtained from: Submitted by: Reviewed by: beril

--- a/src/templates/screens/help/UserQuery.vm
+++ b/src/templates/screens/help/UserQuery.vm
@@ -17,6 +17,7 @@
             <li><a href="$link.setPage("help,UserQueryCustom.vm")">$l10n.CustomQueries</a></li>
             <li><a href="$link.setPage("help,UserQueryText.vm")">$l10n.TextQueries</a></li>
             <li><a href="$link.setPage("help,UserQuerySaved.vm")">$l10n.SavedQueries</a></li>
+            <li><a href="$link.setPage("help,UserQueryCrossProject.vm")">$l10n.CrossProjectQueries</a></li>
            </ul>
            </li>
           <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a></li>
