--- a/src/templates/screens/help/UserQuerySaved.vm
+++ b/src/templates/screens/help/UserQuerySaved.vm
@@ -18,6 +18,7 @@
                 <!--<li><a href="#subscribing">$l10n.SubscribingQueries</a></li>-->
               </ul>
             </li>
+            <li><a href="$link.setPage("help,UserQueryCrossProject.vm")">$l10n.CrossProjectQueries</a></li>
           </ul>
         </li>
       <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a></li>
