--- a/src/templates/screens/help/UserQueryCustom.vm
+++ b/src/templates/screens/help/UserQueryCustom.vm
@@ -11,6 +11,7 @@
               <li><a href="$link.setPage("help,UserQueryAdvanced.vm")">$l10n.AdvancedQueries</a></li>
               <li><strong>$l10n.CustomQueries</strong></li>
               <li><a href="$link.setPage("help,UserQuerySaved.vm")">$l10n.SavedQueries</a></li>
+              <li><a href="$link.setPage("help,UserQueryCrossProject.vm")">$l10n.CrossProjectQueries</a></li>
             </ul>
     </li>
     <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a></li>
