--- a/src/templates/screens/help/UserQueryText.vm
+++ b/src/templates/screens/help/UserQueryText.vm
@@ -18,6 +18,7 @@
               <li><a href="$link.setPage("help,UserQueryAdvanced.vm")">$l10n.AdvancedQueries</a></li>
               <li><a href="$link.setPage("help,UserQueryCustom.vm")">$l10n.CustomQueries</a></li>
               <li><a href="$link.setPage("help,UserQuerySaved.vm")">$l10n.SavedQueries</a></li>
+              <li><a href="$link.setPage("help,UserQueryCrossProject.vm")">$l10n.CrossProjectQueries</a></li>
             </ul>
           </li>
           <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a></li>
