Issue number: 20904 - Fatal error while creating Query - No artifact types in project. Modified files: * src/java/org/tigris/scarab/om/AbstractScarabModule.java - includesIssueType:   use the count method in RModuleIssueTypeTPeer. * src/java/org/tigris/scarab/om/AbstractScarabUser.java - add hasAnySearchableRMITs   method to check if the user has anything to search on.  refactored some common   logic	from getSearchableRMITs	into a	shared method, getSearchableModuleIds. * src/java/org/tigris/scarab/om/RModuleIssueTypePeer.java - added a count method to   return number of rows meeting a specific criteria. * src/templates/macros/MITListMacro.vm -   added explicit initialization of $mitList and $isEdit variables.  previously the   macro was relying on the calling template to have set them. * src/templates/screens/home/XModuleList.vm - remove $isEdit which was only being   used in MITListMacro.  don't show the 'All modules, all issue types option' if   the user can't search on anything.
Reviewed by: elicia

--- a/src/templates/macros/MITListMacro.vm
+++ b/src/templates/macros/MITListMacro.vm
@@ -30,6 +30,8 @@
 
 <h3>$l10n.BuildListOfIssueTypes</h3>
 
+#set ($mitList = $user.CurrentMITList)
+#set ($isEdit = $data.Parameters.getString("queryId", "").length() > 0)
 #if (!$isEdit && $mitList && !$mitList.isEmpty())
 <div class="functnbar">
  <input type="submit" name="eventSubmit_do$event" value="$buttonName" />
